# mila

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  run.sh  skill.json  turbo.json  vercel.json
.github/workflows/: ci.yml  release-desktop.yml
apps/api/: Dockerfile  README.md  package.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  asr-config.spec.ts  asr-config.ts  health.controller.ts  main.ts
apps/api/test/: app.e2e-spec.ts  jest-e2e.json
apps/asr-worker/: Dockerfile  README.md  main.py  requirements.txt
apps/browser-extension/: README.md  manifest.json
apps/browser-extension/src/: background.js  content.js
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/electron/: README.md  electron-builder.yml  package.json  tsconfig.json
apps/electron/assets/: README.md
apps/electron/scripts/: generate-mac-icon.mjs  stage-web.mjs
apps/electron/src/: assist-overlay-content.test.ts  assist-overlay-content.ts  assist-overlay-window.ts  backend-health.test.ts  (+35 more)
apps/mobile/: README.md  app.json  package.json
apps/skill/: cli.js  index.js  package.json
apps/web/: README.md  next.config.ts  package.json  proxy.ts
docs/: ARCHITECTURE.md  COMPETITIVE_NOTES.md  DEPLOY.md  PRODUCT.md
infra/: docker-compose.override.yml  docker-compose.yml
infra/db/: init.sql
scripts/: install-launch-agent.sh  measure-live-latency.mjs  mila-autostart.sh  uninstall-launch-agent.sh  verify-renderer-capabilities.mjs
(+93 files in other folders)
