[package]
name = "mila-desktop"
version = "0.1.0"
description = "Mila desktop bridge"
authors = ["Mila"]
license = "UNLICENSED"
edition = "2021"

[lib]
name = "mila_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
